  * Update hurd-i386/local-tls-support.diff.
  * Add hurd-i386/local-kernel-features.diff: provide almost empty
    kernel-features.h for files that include it.
  * Add arm/local-args6.diff: provide DOCARGS_6 and UNDOCARGS_5 for
    arm old-abi.
  * Add arm/local-lowlevellock.diff: new patch to fix build on arm.
  * debian/rules, debian/rules.d/build.mk: allow per architecture
    TIMEOUTFACTOR.
  * sysdeps/arm.mk, sysdeps/armel.mk, sysdeps/hppa.mk: define 
    TIMEOUTFACTOR.
  * locales-depver: tighten locales dependencies.

  [ Petr Salinger]
  * any/local-linuxthreads-unwind.diff: provide unwind-resume routine for
    linuxthreads.
  * any/local-stdio-lock.diff: make _IO_*_lock linuxthreads compliant.
  * any/local-o_cloexec.diff: don't assume O_CLOEXEC is always defined.

  [ Pierre Habouzit ]
  * Remove any/local-iconv-fix-trampoline.diff (obsolete).
  * Remove any/submitted-strfry.diff (merged).
  * Update any/submitted-rfc3484-sortv4.diff.
  * Update localedata/*first_weekday.diff.
  * Remove localedata/fix-am_ET.diff (obsolete).
  * Add locale/preprocessor-collate-uli-sucks.diff to revert Ulrich's
    preprocessor that isn't enough for Debian.
  * Update patches/locale/preprocessor-collate.diff.
  * Add alpha/submitted-PTR_MANGLE.diff (Closes: #448508).

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 01 Nov 2007 15:24:02 +0100

glibc (2.6.1-6) unstable; urgency=low

  [ Aurelien Jarno ]
  * Update Spanish debconf translation, by Carlos Valdivia Yagüe.

  [ Clint Adams ]
  * debian/po/de.po: update from Helge Kreutzmann. closes: #442888.
  * debian/po/cs.po: update from Miroslav Kure. closes: #442904.
  * debian/po/it.po: update from Luca Monducci. closes: #443497.
  * debian/po/ja.po: update from Kenshi Muto. closes: #446577.
  * Add any/cvs-posix-glob.diff, fixing improper of treatment of \
    in glob(). closes: #445210

 -- Clint Adams <schizo@debian.org>  Sun, 14 Oct 2007 10:02:35 -0400

glibc (2.6.1-5) unstable; urgency=low

  [ Pierre Habouzit ]