@@ -95,7 +95,7 @@ CXX = g++-4.2
 
 RUN_TESTSUITE = yes
 
-TIMEOUT_FACTOR = 1
+TIMEOUTFACTOR = 1
 
 # Set CC for cross-compiling
 ifneq ($(DEB_HOST_ARCH),$(DEB_BUILD_ARCH))
