@@ -1,3 +1,6 @@
+# Some tests assume a fast machine
+TIMEOUTFACTOR=2
+
 # build 64-bit (s390x) alternative library
 GLIBC_PASSES += s390x
 DEB_ARCH_REGULAR_PACKAGES += libc6-s390x libc6-dev-s390x
