@@ -72,7 +72,8 @@ glibc (2.7-0exp5) UNRELEASED; urgency=low
   * Add arm/local-lowlevellock.diff: new patch to fix build on arm.
   * debian/rules, debian/rules.d/build.mk: allow per architecture
     TIMEOUTFACTOR.
-  * sysdeps/arm.mk, sysdeps/armel.mk, sysdeps/hppa.mk: define 
+  * sysdeps/arm.mk, sysdeps/armel.mk, sysdeps/hppa.mk, sysdeps/s390.mk:
+    define.
     TIMEOUTFACTOR.
   * locales-depver: tighten locales dependencies.
 
@@ -93,7 +94,7 @@ glibc (2.7-0exp5) UNRELEASED; urgency=low
   * Update patches/locale/preprocessor-collate.diff.
   * Add alpha/submitted-PTR_MANGLE.diff (Closes: #448508).
 
- -- Aurelien Jarno <aurel32@debian.org>  Thu, 01 Nov 2007 15:24:02 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 01 Nov 2007 17:11:10 +0100
 
 glibc (2.6.1-6) unstable; urgency=low
 
